[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Fonts/PlatNomor-WyVnn.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Sound_Effects/Spell_Shoot/500908__bertsz__spell-shoot.wav" type="AudioStream" id=2]
[ext_resource path="res://Menus/Settings/Settings.gd" type="Script" id=3]
[ext_resource path="res://Menus/Keybinding/Keybinding.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.785339
margin_right = 0.7854
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -199.0
margin_right = 199.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Label" parent="Menu"]
margin_right = 398.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 1 )
text = "
Configuracoes
"
align = 1
valign = 1

[node name="Master_Volume" type="HBoxContainer" parent="Menu"]
margin_top = 109.0
margin_right = 398.0
margin_bottom = 149.0
rect_min_size = Vector2( 324, 40 )

[node name="Label" type="Label" parent="Menu/Master_Volume"]
margin_right = 120.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
text = "Volume Total"
align = 1
valign = 1

[node name="Silder" type="HSlider" parent="Menu/Master_Volume"]
margin_left = 124.0
margin_right = 324.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
min_value = -20.0
max_value = 3.0
scrollable = false

[node name="Music_Volume" type="HBoxContainer" parent="Menu"]
margin_top = 153.0
margin_right = 398.0
margin_bottom = 193.0
rect_min_size = Vector2( 324, 40 )

[node name="Label" type="Label" parent="Menu/Music_Volume"]
margin_right = 120.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
text = "MÃºsica"
align = 1
valign = 1

[node name="Silder" type="HSlider" parent="Menu/Music_Volume"]
margin_left = 124.0
margin_right = 324.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
min_value = -20.0
max_value = 3.0
scrollable = false

[node name="Teste" type="Control" parent="Menu/Music_Volume"]
margin_left = 328.0
margin_right = 398.0
margin_bottom = 40.0
rect_min_size = Vector2( 70, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Menu/Music_Volume/Teste"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -10.0
margin_right = 25.0
margin_bottom = 10.0
rect_min_size = Vector2( 50, 20 )
text = "Teste"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Som" type="AudioStreamPlayer" parent="Menu/Music_Volume/Teste"]
stream = ExtResource( 2 )
bus = "BG"

[node name="SFX_Volume" type="HBoxContainer" parent="Menu"]
margin_top = 197.0
margin_right = 398.0
margin_bottom = 237.0
rect_min_size = Vector2( 324, 40 )

[node name="Label" type="Label" parent="Menu/SFX_Volume"]
margin_right = 120.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )
text = "Efeitos Sonoros"
align = 1
valign = 1

[node name="Silder" type="HSlider" parent="Menu/SFX_Volume"]
margin_left = 124.0
margin_right = 324.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
min_value = -20.0
max_value = 3.0
scrollable = false

[node name="Teste" type="Control" parent="Menu/SFX_Volume"]
margin_left = 328.0
margin_right = 398.0
margin_bottom = 40.0
rect_min_size = Vector2( 70, 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Menu/SFX_Volume/Teste"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -10.0
margin_right = 25.0
margin_bottom = 10.0
rect_min_size = Vector2( 50, 20 )
text = "Teste"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Som" type="AudioStreamPlayer" parent="Menu/SFX_Volume/Teste"]
stream = ExtResource( 2 )
bus = "SFX"

[node name="Keybinds" type="Control" parent="Menu"]
margin_top = 241.0
margin_right = 398.0
margin_bottom = 311.0
rect_min_size = Vector2( 0, 70 )

[node name="Keybinds" type="Button" parent="Menu/Keybinds"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -15.0
margin_right = 75.0
margin_bottom = 15.0
rect_min_size = Vector2( 150, 30 )
text = "Configurar Controles"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sair" type="Control" parent="Menu"]
margin_top = 315.0
margin_right = 398.0
margin_bottom = 385.0
rect_min_size = Vector2( 0, 70 )

[node name="Sair" type="Button" parent="Menu/Sair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -15.0
margin_right = 50.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 30 )
text = "Voltar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keybinding" parent="." instance=ExtResource( 4 )]
visible = false
[connection signal="value_changed" from="Menu/Master_Volume/Silder" to="." method="_on_master_changed"]
[connection signal="value_changed" from="Menu/Music_Volume/Silder" to="." method="_on_music_changed"]
[connection signal="pressed" from="Menu/Music_Volume/Teste/Button" to="." method="_on_Music_Button_pressed"]
[connection signal="value_changed" from="Menu/SFX_Volume/Silder" to="." method="_on_sfx_changed"]
[connection signal="pressed" from="Menu/SFX_Volume/Teste/Button" to="." method="_on_SFX_Button_pressed"]
[connection signal="pressed" from="Menu/Keybinds/Keybinds" to="." method="_on_Keybinds_pressed"]
[connection signal="pressed" from="Menu/Sair/Sair" to="." method="_on_Sair_pressed"]
[connection signal="menu_exited" from="Keybinding" to="." method="_on_Keybinding_exited"]
